[package]
name = "cracbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
serde_json = "1.0.107"
signal-hook = "0.3.17"
telegram-bot-api = "0.1.2"
tokio = "1.33.0"
tokio-cron-scheduler = "0.9.4"

[profile.release]
lto = true
